More style fixes
* Center challenges
* Fix descenders at the bottom not visible
* Fix <pre> in problems too dark

--- a/CTFd/themes/core/static/css/base.css
+++ b/CTFd/themes/core/static/css/base.css
@@ -4,6 +4,10 @@ html, body, .container {
     color: #ccc;
 }
 
+code, kbd, pre, samp {
+    font-family: Input, monospace;
+}
+
 h1, h2, h3 {
     font-family: Input, monospace;
     font-weight: 500;
